# I-am-watching-you

./: .env  CameraEvents.py  CaptureImage.py  FaceIn.py  README.md  main.py  pyproject.toml  簡報1.pptx
